Add missing docs to zh language
We will need the translation team to take a full pass but this should fix the build errors

Signed-off-by: Brad Davidson <brad.davidson@rancher.com>

--- a/i18n/zh/docusaurus-plugin-content-docs/current.json
+++ b/i18n/zh/docusaurus-plugin-content-docs/current.json
@@ -18,5 +18,13 @@
   "sidebar.mySidebar.category.Security": {
     "message": "安全",
     "description": "The label for category Security in sidebar mySidebar"
+  },
+  "sidebar.mySidebar.category.Cluster Datastore Options": {
+    "message": "Cluster Datastore Options",
+    "description": "The label for category Cluster Datastore Options in sidebar mySidebar"
+  },
+  "sidebar.mySidebar.category.CLI Tools": {
+    "message": "CLI Tools",
+    "description": "The label for category CLI Tools in sidebar mySidebar"
   }
 }
