Update Chinese docs
Signed-off-by: vickyhella <vickyhella@hotmail.com>

--- a/i18n/zh/code.json
+++ b/i18n/zh/code.json
@@ -5,7 +5,7 @@
   },
   "theme.ErrorPageContent.tryAgain": {
     "message": "重试",
-    "description": "The label of the button to try again when the page crashed"
+    "description": "The label of the button to try again rendering when the React error boundary captures an error"
   },
   "theme.NotFound.title": {
     "message": "找不到页面",
@@ -400,5 +400,17 @@
   "theme.docs.sidebar.navAriaLabel": {
     "message": "文档侧边栏",
     "description": "The ARIA label for the sidebar navigation"
+  },
+  "theme.SearchPage.searchContext.everywhere": {
+    "message": "所有位置"
+  },
+  "theme.SearchBar.noResultsText": {
+    "message": "没有找到任何文档"
+  },
+  "theme.SearchBar.seeAllOutsideContext": {
+    "message": "查看 {context} 外的所有结果"
+  },
+  "theme.SearchBar.searchInContext": {
+    "message": "查看 {context} 内的所有结果"
   }
 }
